2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: It's actually pretty damn
	  tough to get IndexOfSubtree to work right so I've just
	  replaced it by creating an enumerator and iterating over the
	  tree structure. It's not the most efficient but it
	  definitely works in all cases.

	* StandardCollectionView.cs: When we add/remove an item from
	  the source collection we need to get the actual index of the
	  item in the sorted/grouped/filtered collection and use that
	  to adjust the current selection. Fix an issue in
	  RemoveFromFilteredAndGroup where we added the item to the
	  group again instead of removing it. Fixes yet more of 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* StandardCollectionViewGroup.cs: Add the ability to add items
	  to CollectionViewGroups while ignoring the SortDescriptions.
	  Fix several issues where we were getting the index from the
	  wrong collection which was breaking the MoveCurentTo logic
	  when elements were added/removed. Fixes the new moon-units
	  and more of drt 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* StandardCollectionViewGroup.cs: Fix up how we insert items
	  to the filtered collection when sorting is enabled. In some
	  cases we appear to binary search and insert the item, in
	  others we do a linear search and insert.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Update the IsEmpty property.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Fix the implementation of
	  Contains now that we don't always use the filtered list.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewSource.cs:
	* ICollectionViewFactory.cs: Add in the ICollectionViewFactory
	  interface and make CollectionViewSource use it.

2010-05-13  Alan McGovern  <amcgovern@novell.com>
